--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -93,6 +93,10 @@ section {
   margin: auto;
 }
 
+.logo-container {
+  width: 70%;
+}
+
 @media(max-width: 991px) {
   .hc {
     align-content: right;
